<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupFragment"
    android:background="@drawable/signup_background"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edt_username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingBottom="15dp"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/waveform_selected"
                    android:background="@drawable/register_shape"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edt_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/waveform_selected"
                    android:background="@drawable/register_shape" />


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ed_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/waveform_selected"
                    android:background="@drawable/register_shape" />
                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edt_phone"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:paddingBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/waveform_selected"
                    android:background="@drawable/register_shape"/>
                <Button
                    android:id="@+id/signUp"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_signup"
                    android:textColor="#fff"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="60dp"
                    android:textSize="17sp"
                    android:background="@drawable/btn_shape"
                    />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>